# autoracer_hooke

./: .gitignore  README.md  autoracer.repos  defaults.env
src/autoracer_bringup/: CMakeLists.txt  package.xml
src/autoracer_bringup/config/hooke2/: fixposition.param.yaml  hooke2.param.yaml  lidar_top.param.yaml  ndt_scan_matcher.param.yaml  vehicle_info.param.yaml
src/autoracer_bringup/launch/: bench_verification.launch.py  lidar_rviz.launch.py  lidar_vehicle_rviz.launch.py  localization.launch.py  map_rviz.launch.py  mock_lidar_ndt.launch.py  mock_lidar_record_scenario.launch.py  sensing.launch.py  track.launch.py  vehicle.launch.py
src/autoracer_bringup/rviz/: lidar_pointcloud.rviz  lidar_vehicle.rviz  map_pointcloud.rviz  mock_lidar_ndt.rviz  mock_lidar_record.rviz
src/autoracer_localization/: package.xml  setup.cfg  setup.py
src/autoracer_localization/autoracer_localization/: fixposition_seed_filter.py  ndt_initial_pose_predictor.py  ndt_startup_helper.py  pose_tf_broadcaster.py
src/autoracer_localization/launch/: pose_tf.launch.py
src/autoracer_localization/test/: test_localization_helpers.py
src/autoracer_sensing/: package.xml  setup.cfg  setup.py
src/autoracer_sensing/autoracer_sensing/: mock_lidar_tools.py  velocity_to_fixposition_speed.py
src/autoracer_sensing/test/: test_mock_lidar_tools.py
src/hardware_drivers/can_driver/: CMakeLists.txt  package.xml
src/hardware_drivers/can_driver/can_client/: CMakeLists.txt  can_client.hpp
src/hardware_drivers/can_driver/can_client/esd/: esd_can_client.hpp
src/hardware_drivers/can_driver/can_client/innodisk/: innodisk_can_client.hpp
src/hardware_drivers/can_driver/can_client/kvaser/: kvaser_can_client.hpp
src/hardware_drivers/can_driver/can_client/socket/: socket_can_client.hpp
src/hardware_drivers/can_driver/can_client/third_lib/innodisk_can/include/: lib_emuc_2.h
src/hardware_drivers/can_driver/can_client/third_lib/kvaser_can/: BUILD
src/hardware_drivers/can_driver/include/: can_driver.hpp
src/hardware_drivers/can_driver/launch/: can_driver_node.launch.xml  can_driver_node_kvaser.launch.xml  can_driver_node_socket.launch.xml  can_driver_node_socket_can0.launch.xml  can_driver_node_socket_can1.launch.xml  can_driver_node_test.launch.xml
src/hardware_drivers/can_driver/src/: can_driver.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/: CMakeLists.txt  README.md  package.xml
src/hooke2_vehicle/interfaces/hooke2_interface/config/: hooke2.param.yaml  hooke2_brake_calibration.xml  hooke2_diag_publisher.param.yaml  hooke2_steer_calibration.xml
src/hooke2_vehicle/interfaces/hooke2_interface/include/common/: brake_command_101.hpp  gear_command_103.hpp  message_manager.hpp  param_monitor.hpp  park_command_104.hpp  protocol_data.hpp  steering_command_102.hpp  throttle_command_100.hpp  vehicle_mode_command_105.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_additional_debug_publisher/: hooke2_additional_debug_publisher_node.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_can_publisher/: hooke2_can_publisher.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_dynamic_parameter_changer/: hooke2_dynamic_parameter_changer_node.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_interface/: hooke2_diag_publisher.hpp  hooke2_interface.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_message_manager/: hooke2_message_manager.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/include/hooke2_steer_test/: hooke2_steer_test.hpp
src/hooke2_vehicle/interfaces/hooke2_interface/launch/: hooke2_additional_debug_publisher.launch.xml  hooke2_interface.launch.xml  hooke2_interface_debug.launch.xml  hooke2_steer_test.launch.xml
src/hooke2_vehicle/interfaces/hooke2_interface/src/common/: brake_command_101.cpp  gear_command_103.cpp  park_command_104.cpp  steering_command_102.cpp  throttle_command_100.cpp  vehicle_mode_command_105.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_additional_debug_publisher/: hooke2_additional_debug_publisher_main.cpp  hooke2_additional_debug_publisher_node.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_can_publisher/: hooke2_can_publisher.cpp  hooke2_can_publisher_node.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_dynamic_parameter_changer/: hooke2_dynamic_parameter_changer_main.cpp  hooke2_dynamic_parameter_changer_node.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_interface/: hooke2_diag_publisher.cpp  hooke2_diag_publisher_node.cpp  hooke2_interface.cpp  hooke2_interface_node.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_message_manager/: hooke2_message_manager.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/src/hooke2_steer_test/: hooke2_steer_test.cpp  hooke2_steer_test_node.cpp
src/hooke2_vehicle/interfaces/hooke2_interface/tools/: vehicle_interface_test_script.py
src/wd_msgs/vehicle_interface_msgs/hooke2_msgs/: CMakeLists.txt  package.xml
src/wd_msgs/vehicle_interface_msgs/hooke2_msgs/msg/: AllSystemStatuses.msg  BmsReport512.msg  BrakeCmd101.msg  BrakeReport501.msg  CabinClimateRpt.msg  ComponentRpt.msg  EStopRpt.msg  GearCmd103.msg  GearReport503.msg  GlobalRpt.msg  GlobalRpt2.msg  NotificationCmd.msg  ParkCmd104.msg  ParkReport504.msg  SafetyFuncCriticalStopRpt.msg  SafetyFuncRpt.msg  SteeringCmd.msg  SteeringCmd102.msg  SteeringReport502.msg  SystemCmdInt.msg  SystemRptBool.msg  SystemRptFloat.msg  SystemRptInt.msg  ThrottleCmd100.msg  ThrottleReport500.msg  UltrSensor507.msg  UltrSensor508.msg  UltrSensor509.msg  UltrSensor510.msg  UltrSensor511.msg  VcuReport505.msg  VehicleModeCmd105.msg  VinReport514.msg  VinReport515.msg  VinReport516.msg  WatchdogRpt.msg  WatchdogRpt2.msg  WheelSpeedReport506.msg
src/wd_msgs/vehicle_interface_msgs/wd_byte/: CMakeLists.txt  package.xml
src/wd_msgs/vehicle_interface_msgs/wd_byte/include/: byte.hpp
src/wd_msgs/vehicle_interface_msgs/wd_byte/include/wd_byte/: byte.hpp
src/wd_msgs/vehicle_interface_msgs/wd_byte/src/wd_byte/: byte.cpp
(+56 files in other folders)
