<?xml version="1.0"?>
<package format="2">
  <name>wd_byte</name>
  <version>0.1.0</version>
  <description>wd byte package</description>
  <maintainer email="boping.du@whaledynamic.com">Tomoya-Sato</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>  
